# vrr

./: README.md
client/: .gitignore  Makefile  conf.lua  controller.lua  floor.lua  funny.c  log.lua  log_thread.lua  main.lua  mediathread.lua  new_mediathread.lua  util.lua  window.lua
server/: pyproject.toml
server/vrr_server/: main.py
