[tool.poetry]
name = "vrr-server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
mss = "^6.1.0"
Pillow = "^8.4.0"
ffmpeg-python = "^0.2.0"
numpy = "^1.21.5"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
vrr = "vrr_server:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
